--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="Uttam B G | Portfolio">
     <meta name="keywords" content="Uttam B G,Uttam,Code Uttam,Portfolio Uttam B G,Freelance website developer">
-    <meta property="og:description" content="Looking for a talented freelance website developer? Uttam has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, and React, as well as expertise in CMS systems like WordPress and Shopify, Contact Vinayak today to get started. Contact now today to get started on your web development project." name="description">
+    <meta property="og:description" content="Looking for a talented freelance website developer? Uttam has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, and React, as well as expertise in CMS systems like WordPress and Shopify, Contact Uttam today to get started on your web development project." name="description">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image" content="Images/VinayakSingh.jpg">
     <meta name="image" property="og:image" content="Images/VinayakSingh.jpg">
