--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="image" property="og:image" content="Images/VinayakSingh.jpg">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="website"> 
     <meta property="og:type" content="article">
     <meta property="article:author" content="/">
     <meta property="og:site_name" content="/">
@@ -27,6 +27,15 @@
     <meta property="og:locale" content="pt_BR">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="Yuca5UbpJGE9KOnlEWxQmTwpo4F__IKeQ8qDO6AO91U" />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L63VJPGVXD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L63VJPGVXD');
+</script>
 </head>
 
 <body>
