--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="Jeevan H G | Portfolio">
     <meta name="keywords" content="Jeevan H G,Jeevan,Code Jeevan,Portfolio Jeevan H G,Freelance android developer">
-    <meta property="og:description" content="Looking for a talented freelance android developer? Jeevan has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, and React, as well as expertise in CMS systems like WordPress and Shopify, Contact Uttam today to get started on your web development project." name="description">
+    <meta property="og:description" content="Looking for a talented freelance android developer? Jeevan has the skills and expertise you need to bring your website vision to life. With a wide range of skills including Java, Dart(flutter), JavaScript(react), and Python, as well as expertise in applications like android studio and vs code, Contact Jeevan today to get started on your android development project." name="description">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image" content="Images/VinayakSingh.jpg">
     <meta name="image" property="og:image" content="Images/VinayakSingh.jpg">
